--- a/cv/CV.tex
+++ b/cv/CV.tex
@@ -5,7 +5,7 @@
 
 \oddsidemargin -.5in
 \evensidemargin -.5in
-\marginsize{0.5in}{0.5in}{1in}{1in}
+\marginsize{0.5in}{0.5in}{0.5in}{0.5in}
 
 \textwidth=6.0in
 
@@ -33,166 +33,151 @@
 
 \section{\sc Contact Information}
 
-  \vspace{.05in}
-
   \begin{tabular}{@{}p{2.9in}p{6in}}
-	{\it Website:} www.sanyamkapoor.com & {\it Email:} cs12b1043@iith.ac.in \\
-	{\it Github:} github.com/activatedgeek & {\it Mobile:} +91 83107 12634  \\
+	{\it Website:} www.sanyamkapoor.com & {\it Email:} sanyam@nyu.edu \\
+	{\it Github:} github.com/activatedgeek  \\
   \end{tabular}
 
-\section{\sc Research Interests}
-  Computer Vision and Perception, Object Recognition, Deep Learning
+  \vspace*{-3.5mm}
+
+\section{\sc Broad Research Interests}
+  Computer Vision, Perception, Geometry Estimation; Deep Learning
 
 \section{\sc Education}
 
-  {\bf Indian Institute of Technology, Hyderabad}, India \hfill 2012 - 2016 \\
-  	B. Tech. Computer Science and Engineering,
-	GPA: 8.62 / 10 ({\bf Top 10})
+  {\bf Courant Institute of Mathematical Sciences, New York University} \hfill 2017 - 2019 (exp.) \\
+  	Master of Science (M.S.) in Computer Science
 
-  \vspace*{-2.5mm}
+  \vspace*{-3.5mm}
 
+  {\bf Indian Institute of Technology (IIT) Hyderabad}, India \hfill 2012 - 2016 \\
+  	Bachelor of Technology (B. Tech.) in Computer Science and Engineering,
+	GPA: 8.62 / 10 ({\bf Top 10}) \\
+    Courses: \it{Computer Vision, Soft Computing, Numerical Linear Algebra for Data Analysis, Operating Systems, Compiler Design, Calculus, Real \& Complex Analysis}
+
+  \vspace*{-3.5mm}
+
+  \begin{comment}
   {\bf La Montessori School}, Kullu, HP, India \hfill 2010 - 2012 \\
 	Intermediate (Physics, Mathematics, Chemistry),
     Percentage Score: 93.4\% ({\bf Rank 1})
 
-  \vspace*{-2.5mm}
+  \vspace*{-3.5mm}
 
   {\bf La Montessori School}, Kullu, HP, India \hfill 2010 \\
 	Matriculation,
     GPA: 9.8 / 10, ({\bf Top 2})
 
+  \vspace*{-3.5mm}
+  \end{comment}
+
+\section{\sc Research Experience}
+  {\bf Food Volume Estimation} \hfill July 2017 - present \\
+    {\em Advisor: Prof. Dennis Shasha, New York University} \\
+    I am building an end-to-end pipeline of food volume estimation from a given set of images of food, for dietary purposes. Using generated interest points, I am investigating techniques for 3D Pose Estimation and Visual Inertial Odometry to approximate shape of the food.
+
+    \vspace*{-3.5mm}
+
+  {\bf Sports Recognition via Dense Trajectory Features} \hfill September - November, 2015 \\
+  	{\em Advisor: Prof. Vineeth N Balasubramanian, IIT Hyderabad} \\
+    I investigated feature extraction in videos using {\it HOG}, {\it HOF} and {\it MBH} detectors (based on optical flow analysis with {\it DenseTrack}). It was trained with an {\it SVM (Chi-Squared Kernel)} on 8 sports from {\it UCF Sports Dataset} and achieved accuracy of 30\%.
+
+  \vspace*{-3.5mm}
+
+  {\bf eDrishti, Engagement Level Detection in Videos} \hfill January - April, 2015 \\
+  	{\em Advisor: Prof. Vineeth N Balasubramanian, IIT Hyderabad} \\
+  	I investigated methods to recognize engagement levels (high, medium or low) of viewers during a MOOC video. It involved extracting fine facial features using {\it Gabor Filters}, achieving an accuracy of 67\% on a self-curated dataset of over 200 video clips.
+
+  \vspace*{-3.5mm}
+
 \section{\sc Honors and Awards}
 
-  {\bf StackOverflow Top Contributor}, top 0.6\% overall among 7 million members
+  {\bf StackOverflow Top Contributor}, top 0.6\% overall among 7+ million members, 2017
 
-  \vspace*{-2.5mm}
+  \vspace*{-3.5mm}
 
   {\bf NASSCOM Emerge 50}, {\it StoryXpress} among over 500 startups across India for innovation impact and growth, 2015
 
-  \vspace*{-2.5mm}
+  \vspace*{-3.5mm}
 
   {\bf HYSEA Best Software Product, Student Innovation}, {\it StoryXpress} among over 100 startups in Hyderabad, 2015
 
-  \vspace*{-2.5mm}
+  \vspace*{-3.5mm}
 
   {\bf Microsoft Build the Shield, India}, First Runner Up among 280 teams, 2015
 
-  \vspace*{-2.5mm}
+  \vspace*{-3.5mm}
 
+  \begin{comment}
   {\bf Best Science \& Technology Club}, Core Member, {\it Infero}, IIT Hyderabad for contributions to student community, 2014
 
-  \vspace*{-2.5mm}
+  \vspace*{-3.5mm}
+  \end{comment}
 
   {\bf ACM ICPC Amritapuri Regionals} finalist among over 1500 teams, 2013
 
-  \vspace*{-2.5mm}
+  \vspace*{-3.5mm}
 
-  {\bf TODAI Award}, {\it University of Tokyo, Japan} for outstanding academic performance ({\bf Rank 1}), cash prize of USD 1500, 2013
+  {\bf TODAI Award, University of Tokyo}, {\it Japan} for outstanding academic performance ({\bf Rank 1}), cash prize of USD 1500, 2013
 
-  \vspace*{-2.5mm}
+  \vspace*{-3.5mm}
 
   {\bf Academic Excellence Award}, {\it IIT Hyderabad} for highest GPA, 2012
 
-  \vspace*{-2.5mm}
+  \vspace*{-3.5mm}
 
+  \begin{comment}
   {\bf Top 0.5\%}, {\it IIT JEE} (0.5 million students) and {\bf Top 0.1\%}, {\it AIEEE} (1.2 million students), 2012
 
-\section{\sc Research Experience}
-
-  {\bf Sports Recognition via Dense Trajectory Features} \hfill September - November, 2015 \\
-  	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn} \vspace{0.15 \baselineskip} \\
-    I investigated feature extraction in videos using {\it HOG}, {\it HOF} and {\it MBH} detectors (based on optical flow analysis with {\it DenseTrack}) and represented these as Bag of Visual Words. It was trained via an {\it SVM (Chi-Squared Kernel)} on 8 sports from {\it UCF Sports Dataset} and achieved accuracy of 30\%.
-
-  \vspace*{-2.5mm}
-
-  {\bf eDrishti, Engagement Level Detection in Videos} \hfill January - April, 2015 \\
-  	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn, Matlab, Weka} \vspace{0.15 \baselineskip} \\
-  	I built a One-Vs-Rest SVM Classifier to recognize engagement levels (high, medium or low) of viewers during a MOOC video. It involved extracting fine facial features using {\it Gabor Filters}, achieving an accuracy of 67\% on a self-curated dataset of over 200 video clips.
-
-  \vspace*{-2.5mm}
-
-  {\bf Partial Face Detection} \hfill August - November, 2014 \\
-  	{\em Advisor: Dr. Vineeth N Balasubramanian}, {\em Technologies: Scikit-Learn} \vspace{0.15 \baselineskip} \\
-  I investigated state-of-the-art methods to detect partial faces in images with more natural environments. Occlusions, illumination variations and shadows make this problem challenging. {\it Graph Based Image Segmentation and Coloring} was used for spatial similarity analysis.
+  \vspace*{-3.5mm}
+  \end{comment}
 
 \section{\sc Professional Experience}
 
-  {\bf Software Engineer, Headout}, Bengaluru, India, {\it headout.com}  \hfill December 2016 - \\
-    I am part of the {\it Platform} team which handles development of APIs and client presentation layers. I also successfully led charge to move all services to a CI/CD enabled deployment pattern and actively engaged in internal developer tooling on top of Docker.
+  {\bf Software Engineer, Headout}, Bengaluru, India, {\it headout.com}  \hfill December 2016 - July 2017 \\
+    As a part of the {\it Platform} team, I undertook development of APIs and client presentation layers. I also maintained internal developer tooling and also successfully migrated the complete architecture to a {\it CI/CD} infrastructure based on top of Docker.
 
-  \vspace*{-2.5mm}
-
-  {\bf Author, MariaDB Service}, {\it github.com/dcos-labs/dcos-mariadb-service} \hfill September 2016 - \\
-    I am building an Open Source distributed scheduler for {\it MariaDB} on top of {\em Mesos}. It enables automated scheduling, scaling and maintenance of large-scale SQL databases deployed on {\it Datacenter Operating System (DC/OS)}. I've contributed container support to the {\it Mesos Framework Java SDK}.
-
-  \vspace*{-2.5mm}
+  \vspace*{-3.5mm}
 
   {\bf Co-Founder, StoryXpress}, Hyderabad, India, {\it storyxpress.co}  \hfill May 2013 - August 2016 \\
-    I co-founded a cloud service for large scale automated video content creation. I led complete engineering efforts from development to deployment. This included building the core {\it Video Rendering Engine} on top of {\it OpenGL} from scratch and the enterprise API used by large organizations like {\it Target} and {\it TradeIndia}. I also handled complete deployment automation on top of {\it AWS}, {\it Azure} and {\it Digital Ocean}.
+    I co-founded a cloud service for large scale automated video content creation. I led complete engineering efforts and built a {\it Video Rendering Engine} on top of {\it OpenGL}. The enterprise API is being used by large organizations like {\it Target} and {\it TradeIndia}.
+
+  \vspace*{-3.5mm}
 
 \section{\sc Selected Projects}
 
   {\bf Docker Consul} \hfill April 2016 \\
-	I built an Open Source {\it Docker} container image to deploy a quorum management technology called {\it Consul}. It included some networking tweaks to be readily deployed to data centers. It has close to {\em 25000 pulls} since its creation.
+	I built an Open Source {\it Docker} container image to deploy a quorum management technology called {\it Consul}. It has close to {\em 25000 pulls} since its creation.
 
-  \vspace*{-2.5mm}
+  \vspace*{-3.5mm}
 
   {\bf QuickSlots v2.0} \hfill February - April, 2016 \\
-  	{\it Advisor: Dr. Ramakrishna Upadrasta, Dr. MV Panduranga Rao} \vspace{0.15 \baselineskip} \\
-    I built a Timetable Scheduler for the {\it Computer Science Department, IIT Hyderabad}. The input to the system is faculty's preferences and the output is a consolidated time-table. The problem was modelled as {\em Min Cost Bipartite Matching}. A mathematical formulation for edge weights was created based on factors like time and venue conflicts, student batch size and course kind.
+  	{\it Advisor: Prof. Ramakrishna Upadrasta, Prof. MV Panduranga Rao, IIT Hyderabad} \vspace{0.15 \baselineskip} \\
+    I built a Timetable Scheduler modeled as {\em Min Cost Bipartite Matching} problem. A mathematical formulation for edge weights was created based on various extrinsic factors.
 
-  \vspace*{-2.5mm}
+  \vspace*{-3.5mm}
 
   {\bf COOL Compiler} \hfill September - November, 2014 \\
-  	{\it Advisor: Dr. Ramakrishna Upadrasta} \vspace{0.15 \baselineskip} \\
-  	I built a compiler for the {\it Classroom Object Oriented Language}. This included understanding and implementing the {\em Lexing}, {\em Parsing} and {\em Semantic} phases for the {\it COOL} grammar. The implementation was done in C++ and including machine code generation for the {\it MIPS} architecture.
+  	{\it Advisor: Prof. Ramakrishna Upadrasta, IIT Hyderabad} \vspace{0.15 \baselineskip} \\
+  	I built a compiler for the {\it Classroom Object Oriented Language}. This included understanding and implementing the {\em Lexing}, {\em Parsing} and {\em Semantic} phases for the {\it COOL} grammar.
 
-  \vspace*{-2.5mm}
-
-  {\bf DownloadPlus} \hfill October - November 2014 \\
-  	I built a Multi-threaded Download Manager in Java. It exploited the chunked downloading feature prescribed by the {\it HTTP/1.1 specification (RFC 2616)} to allow parallel downloading multiple byte ranges of a remote file, decreasing download times. It used {\it Java Sockets} and {\it Java Threads} API.
-
-  \vspace*{-2.5mm}
-
-  {\bf GossipBox} \hfill September - October 2014 \\
-    I built a Client-Server Chat System in {\it C++} using the {\it POSIX Socket API}. It maintained an in-memory hash table of connected clients which were kept in regular sync and automatic garbage collection once sockets timed out.
+  \vspace*{-3.5mm}
 
 \section{\sc Technical Skills}
 
-  {\bf Technologies}: Git, MySQL, Scikit-learn, OpenGL, React, Docker, Redis \\
-  {\bf Programming Languages}: Go, Java, C, C++, Python, Node, MATLAB
-
-\section{\sc Relevant Coursework}
-
-  {\bf Core:} Computer Vision, Soft Computing, Numerical Linear Algebra for Data Analysis, Predictive Analytics \& Knowledge Discovery, Operating Systems, Compiler Design, Computer Networks, Data Structure and Algorithms, Discrete Mathematics \\
-  {\bf Independent Coursework:} Machine Learning ({\it Coursera}), Neural Networks ({\it Coursera}) \\
-  {\bf Breadth:} Real Analysis, Complex Analysis, Calculus, Economics
+  {\bf Technologies}: OpenCV, Scikit-learn, Git, MySQL, OpenGL, React, Docker, Redis \\
+  {\bf Programming Languages}: Go, Java, C, C++, Python, Node
 
 \begin{comment}
-\section{\sc Positions of Responsibility}
-
-  {\bf Volunteer, National Service Scheme}, IIT Hyderabad \hfill 2012 - 2016 \\
-    I donated clothes to {\it old-age homes}. I gave {\it lectures on Basic Science and Mathematics} to primary school students. I was actively involved in {\it planting and watering greens} around the campus and was a volunteer for the {\it campus cleanliness drive}.
-
-  \vspace*{-2.5mm}
-
-  {\bf Core Member, Infero}, IIT Hyderabad \hfill 2013 - 2014 \\
-  	I was a Core Member of {\em Infero}, the Programming Club of IIT Hyderabad. I prepared and delivered presentations on {\em Introduction to C} and {\em Introduction to Python} to freshmen. My team also introduced {\it Code Nights} to encourage Competitive Programming in the student community. We won the {\em Best Sci-Tech Club Award} for these contributions.
-
-  \vspace*{-2.5mm}
-
-  {\bf Events Manager, Entrepreneurship Cell}, IIT Hyderabad \hfill 2013 - 2014 \\
-    I was responsible for managing campus and city-wide events for the club. My team introduced the {\em first ever lecture series} called {\it Spark} which invited successful entrepreneurs for lectures and interaction. I also drafted a {\it Business Plan Competition} as a part of the technical fest.
-
 \section{\sc References}
 
   \begin{tabular}{@{}p{1.85in}p{2in}p{2in}}
 
-  {\bf Dr. Vineeth N \newline Balasubramanian } & {\bf Dr. Ramakrishna \newline Upadrasta} & {\bf Joerg Schad} \\
-        {\it Assistant Professor} & {\it Assistant Professor} & {\it Distributed Systems Engineer} \\
-        {\it IIT Hyderabad} & {\it IIT Hyderabad} & {\it Mesosphere Inc} \\
-        {\it Hyderabad, India} & {\it Hyderabad, India} & {\it Hamburg, Germany} \\
-        {\it vineethnb@iith.ac.in} & {\it ramakrishna@iith.ac.in} & {\it joerg@mesosphere.io} \\
+  {\bf Prof. Vineeth N \newline Balasubramanian } & {\bf Prof. Ramakrishna \newline Upadrasta} \\
+        {\it Assistant Professor} & {\it Assistant Professor} \\
+        {\it IIT Hyderabad} & {\it IIT Hyderabad} \\
+        {\it Hyderabad, India} & {\it Hyderabad, India} \\
+        {\it vineethnb@iith.ac.in} & {\it ramakrishna@iith.ac.in} \\
 
   \end{tabular}
 \end{comment}
