--- a/cv/CV.tex
+++ b/cv/CV.tex
@@ -51,8 +51,7 @@
   \vspace*{-3.5mm}
 
   {\bf Indian Institute of Technology (IIT) Hyderabad}, India \hfill 2012 - 2016 \\
-  	Bachelor of Technology (B. Tech.) in Computer Science and Engineering,
-	GPA: 8.62 / 10 ({\bf Top 10}) \\
+  	Bachelor of Technology (B.Tech.) in Computer Science and Engineering \\
     Courses: \it{Computer Vision, Soft Computing, Numerical Linear Algebra for Data Analysis, Operating Systems, Compiler Design, Calculus, Real \& Complex Analysis}
 
   \vspace*{-3.5mm}
