Summarize CV, add SOP, rearrange build commands

--- a/cv/CV.tex
+++ b/cv/CV.tex
@@ -31,22 +31,22 @@
 
 \begin{resume}
 
-\section{\sc Contact Information}
+\section{\sc Contact Info}
 
   \begin{tabular}{@{}p{2.9in}p{6in}}
-	{\it Website:} www.sanyamkapoor.com & {\it Email:} sanyam@nyu.edu \\
-	{\it Github:} github.com/activatedgeek  \\
+	{\it Website:} www.sanyamkapoor.com & {\it Email:} sanyam@nyu.edu
   \end{tabular}
 
   \vspace*{-3.5mm}
 
-\section{\sc Broad Research Interests}
-  Computer Vision, Perception, Geometry Estimation; Deep Learning
+\section{\sc Research Interests}
+  Computer Vision, Stereo Vision, Multi-view Geometry; Deep Learning
 
 \section{\sc Education}
 
   {\bf Courant Institute of Mathematical Sciences, New York University} \hfill 2017 - 2019 (exp.) \\
-  	Master of Science (M.S.) in Computer Science
+  	Master of Science (M.S.) in Computer Science \\
+     Courses: \it{Foundations of Machine Learning, Programming Languages, Fundamental Algorithms}
 
   \vspace*{-3.5mm}
 
@@ -73,19 +73,19 @@
 \section{\sc Research Experience}
   {\bf Food Volume Estimation} \hfill July 2017 - present \\
     {\em Advisor: Prof. Dennis Shasha, New York University} \\
-    I am building an end-to-end pipeline of food volume estimation from a given set of images of food, for dietary purposes. Using generated interest points, I am investigating techniques for 3D Pose Estimation and Visual Inertial Odometry to approximate shape of the food.
+    Food volume estimation for dietary purposes, multi-view geometry estimation, point cloud generation using depth fusion
 
     \vspace*{-3.5mm}
 
   {\bf Sports Recognition via Dense Trajectory Features} \hfill September - November, 2015 \\
   	{\em Advisor: Prof. Vineeth N Balasubramanian, IIT Hyderabad} \\
-    I investigated feature extraction in videos using {\it HOG}, {\it HOF} and {\it MBH} detectors (based on optical flow analysis with {\it DenseTrack}). It was trained with an {\it SVM (Chi-Squared Kernel)} on 8 sports from {\it UCF Sports Dataset} and achieved accuracy of 30\%.
+    {\it HOG}, {\it HOF} and {\it MBH} detectors, Optical Flow analysis with {\it DenseTrack}, {\it SVM (Chi-Squared Kernel)} on 8 sports from {\it UCF Sports Dataset}, 30\% accuracy
 
   \vspace*{-3.5mm}
 
   {\bf eDrishti, Engagement Level Detection in Videos} \hfill January - April, 2015 \\
   	{\em Advisor: Prof. Vineeth N Balasubramanian, IIT Hyderabad} \\
-  	I investigated methods to recognize engagement levels (high, medium or low) of viewers during a MOOC video. It involved extracting fine facial features using {\it Gabor Filters}, achieving an accuracy of 67\% on a self-curated dataset of over 200 video clips.
+  	Recognize engagement levels (high, medium or low) of viewers during a MOOC video, facial features using {\it Gabor Filters}, self-curated dataset of 200+ videos, 67\% accuracy
 
   \vspace*{-3.5mm}
 
@@ -133,39 +133,39 @@
 
 \section{\sc Professional Experience}
 
-  {\bf Software Engineer, Headout}, Bengaluru, India, {\it headout.com}  \hfill December 2016 - July 2017 \\
-    As a part of the {\it Platform} team, I undertook development of APIs and client presentation layers. I also maintained internal developer tooling and also successfully migrated the complete architecture to a {\it CI/CD} infrastructure based on top of Docker.
+  {\bf Software Engineer, Headout}, Bengaluru, India, \textbf{headout.com}  \hfill December 2016 - July 2017 \\
+    {\it Platform} and {\it Growth} teams, internal developer tooling, led the CI/CD architecture migration
 
   \vspace*{-3.5mm}
 
-  {\bf Co-Founder, StoryXpress}, Hyderabad, India, {\it storyxpress.co}  \hfill May 2013 - August 2016 \\
-    I co-founded a cloud service for large scale automated video content creation. I led complete engineering efforts and built a {\it Video Rendering Engine} on top of {\it OpenGL}. The enterprise API is being used by large organizations like {\it Target} and {\it TradeIndia}.
+  {\bf Co-Founder, StoryXpress}, Hyderabad, India, \textbf{storyxpress.co}  \hfill May 2013 - August 2016 \\
+    Cloud service for Large Scale Automated Video Content creation, built the {\it Video Rendering Engine} on top of {\it OpenGL}, used by enterprises like {\it Target} and {\it TradeIndia}.
 
   \vspace*{-3.5mm}
 
 \section{\sc Selected Projects}
 
   {\bf Docker Consul} \hfill April 2016 \\
-	I built an Open Source {\it Docker} container image to deploy a quorum management technology called {\it Consul}. It has close to {\em 25000 pulls} since its creation.
+  	Open Source Docker container for Hashicorp Consul, 25000+ pulls
 
   \vspace*{-3.5mm}
 
   {\bf QuickSlots v2.0} \hfill February - April, 2016 \\
   	{\it Advisor: Prof. Ramakrishna Upadrasta, Prof. MV Panduranga Rao, IIT Hyderabad} \vspace{0.15 \baselineskip} \\
-    I built a Timetable Scheduler modeled as {\em Min Cost Bipartite Matching} problem. A mathematical formulation for edge weights was created based on various extrinsic factors.
+    Timetable Scheduler using {\em Min Cost Bipartite Matching} in Python
 
   \vspace*{-3.5mm}
 
   {\bf COOL Compiler} \hfill September - November, 2014 \\
   	{\it Advisor: Prof. Ramakrishna Upadrasta, IIT Hyderabad} \vspace{0.15 \baselineskip} \\
-  	I built a compiler for the {\it Classroom Object Oriented Language}. This included understanding and implementing the {\em Lexing}, {\em Parsing} and {\em Semantic} phases for the {\it COOL} grammar.
+    Lexing, Parsing and Semantic Analysis for the {\it Classroom Object Oriented Language (COOL)} in C++
 
   \vspace*{-3.5mm}
 
 \section{\sc Technical Skills}
 
-  {\bf Technologies}: OpenCV, Scikit-learn, Git, MySQL, OpenGL, React, Docker, Redis \\
-  {\bf Programming Languages}: Go, Java, C, C++, Python, Node
+  {\bf Technologies}: OpenCV, Scikit-learn, OpenGL, Git, MySQL, React, Docker, Redis \\
+  {\bf Programming Languages}: Python, Go, C, C++, Node, Java
 
 \begin{comment}
 \section{\sc References}
