Fix content in professional experience

--- a/cv/resume.tex
+++ b/cv/resume.tex
@@ -53,16 +53,15 @@
 \begin{rSection}{Professional Experience}
 
 \begin{rSubsection}{Software Engineer, Headout \it{Bengaluru, India} (\bf{headout.com})}{December 2016 - July 2017}{}{}
-\item Estimation of food volume from a set of food images on a plate for dietary purposes
-\item Investigating techniques for 3D Geometry Reconstruction from a given set of stereo images
-\item Point Cloud Generation based on Depth Fusion Mapping
+\item Designed and implemented experiments for the Growth Team, built APIs for the Platform team
+\item Led efforts for internal developer tooling and productivity
+\item Led the migration to a CI/CD based infrastructure for automated deployments on top of AWS
 
 \end{rSubsection}
 
 \begin{rSubsection}{Co-Founder, StoryXpress, \it{Hyderabad, India} (\bf{storyxpress.co})}{May 2013 - August 2016}{}{}
-\item Recognized the sport being played based on feature trajectories
-\item Used \it{HOG}, \it{HOF} and \it{MBH} detectors for voxel features and tracked the Optical Flow via \it{DenseTrack}
-\item Trained an \it{SVM} on 8 sports from \it{UCF Sports Dataset} with 30\% accuracy
+\item Founded a Cloud Video Service for large scale video creation from static content like image and text
+\item Built an in-house Video Rendering Engine on top of OpenGL eventually used by large enterprises like Target and TradeIndia
 
 \end{rSubsection}
 
@@ -74,7 +73,7 @@
   \item {\bf NASSCOM Emerge 50}, {\it StoryXpress} among 500+ startups across India for innovation impact, 2015
   \item {\bf HYSEA Best Software Product, Student Innovation}, {\it StoryXpress} among 100+ startups, 2015
   \item {\bf Microsoft Build the Shield, India}, First Runner Up among 280 teams, 2015
-  \item {\bf ACM ICPC Amritapuri Regionals} finalist among over 1500 teams, 2013
+  \item {\bf ACM ICPC Amritapuri Regionals} finalist among 1500+ teams, 2013
   \end{itemize}
 \end{rSection}
 
