Fix some typos, fix left alignment

--- a/cv/resume.tex
+++ b/cv/resume.tex
@@ -1,6 +1,6 @@
 \documentclass{resume}
 
-\usepackage[left=0.4 in,top=0.3in,right=0.4 in,bottom=0.3in]{geometry}
+\usepackage[left=0.4 in,top=0.4in,right=0.4 in,bottom=0.4in]{geometry}
 \usepackage{enumitem}
 
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
@@ -37,14 +37,14 @@
 \end{rSubsection}
 
 \begin{rSubsection}{Sports Video Recognition via Dense Trajectory Features}{September 2015 - November 2015}{Advisor:  Prof. Vineeth N Balasubramanian}{}
-\item Utilized \it{HOG}, \it{HOF} and \it{MBH} detectors for voxel features and tracked the Optical Flow via \it{DenseTrack}
-\item Trained an \it{SVM} on 8 sports from \it{UCF Sports Dataset} with 30\% accuracy
+\item Utilized HOG, HOF and MBH detectors for voxel features and tracked the Optical Flow via DenseTrack
+\item Trained an SVM on 8 sports from UCF Sports Dataset with 30\% accuracy
 
 \end{rSubsection}
 
 \begin{rSubsection}{eDrishti, Engagement Level Detection in MOOC Videos}{January 2015 - April 2015}{Advisor:  Prof. Vineeth N Balasubramanian}{}
-\item Generated facial features for expression using \it{Gabor Filters} on a self-curated dataset of 200 videos
-\item Recognized engagement levels (low, medium, high) with and accuracy of 67\%
+\item Generated facial features for expression using Gabor Filters on a self-curated dataset of 200 videos
+\item Recognized engagement levels (low, medium, high) with an accuracy of 67\%
 
 \end{rSubsection}
 
@@ -53,9 +53,9 @@
 \begin{rSection}{Professional Experience}
 
 \begin{rSubsection}{Software Engineer, Headout \it{Bengaluru, India} (\bf{headout.com})}{December 2016 - July 2017}{}{}
-\item Designed and implemented experiments for the Growth Team, built APIs for the Platform team
-\item Led efforts for internal developer tooling and productivity
-\item Led the migration to a CI/CD based infrastructure for automated deployments on top of AWS
+\item Designed and implemented experiments for the Growth Team, built client APIs for the Platform team
+\item Led efforts for internal developer tooling and productivity including reproducible development environments
+\item Led the migration to a CI/CD based infrastructure for automated deployments on top of Docker and AWS
 
 \end{rSubsection}
 
@@ -69,7 +69,7 @@
 
 \begin{rSection}{Honors and Awards}
   \begin{itemize}[label={},topsep=0pt,itemsep=-0.5ex,partopsep=1ex,parsep=1ex,leftmargin=0.25em]
-    \item  {\bf StackOverflow Top Contributor}, top 0.6\% overall among 7+ million members, 2017
+  \item  {\bf StackOverflow Top Contributor}, top 0.6\% overall among 7+ million members, 2017
   \item {\bf NASSCOM Emerge 50}, {\it StoryXpress} among 500+ startups across India for innovation impact, 2015
   \item {\bf HYSEA Best Software Product, Student Innovation}, {\it StoryXpress} among 100+ startups, 2015
   \item {\bf Microsoft Build the Shield, India}, First Runner Up among 280 teams, 2015
@@ -87,10 +87,10 @@
 
 \begin{rSection}{Technical Skills}
 
-\begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
-Programming Languages & Python, Go, C, C++, Node, Java \\
-Technologies & OpenCV, Scikit-learn, OpenGL, Git, MySQL, React, Docker, Redis
-\end{tabular}
+  \begin{itemize}[label={},topsep=0pt,itemsep=-0.5ex,partopsep=1ex,parsep=1ex,leftmargin=0.25em]
+  \item  {\bf Programming Languages}: Python, Go, C, C++, Node, Java
+  \item {\bf Technologies}: OpenCV, Scikit-learn, OpenGL, Git, MySQL, React, Docker, Redis
+  \end{itemize}
 
 \end{rSection}
 
