--- a/cv/resume.tex
+++ b/cv/resume.tex
@@ -32,7 +32,7 @@
 
 \begin{rSubsection}{Food Volume Estimation for Dietary Purposes}{July 2017 - present}{Advisor: Prof. Dennis Shasha}{}
 \item Investigating techniques for 3D Geometry Reconstruction from a given set of stereo images of food on plate
-\item Point Cloud Generation based on Depth Fusion Mapping
+\item Using ideas for Point Cloud Generation based on Depth Fusion Mapping
 
 \end{rSubsection}
 
@@ -54,14 +54,16 @@
 
 \begin{rSubsection}{Software Engineer, Headout \it{Bengaluru, India} (\bf{headout.com})}{December 2016 - July 2017}{}{}
 \item Designed and implemented experiments for the Growth Team, built client APIs for the Platform team
-\item Led efforts for internal developer tooling and productivity including reproducible development environments
-\item Led the migration to a CI/CD based infrastructure for automated deployments on top of Docker and AWS
+\item Led internal developer tooling, reduced developer on-boarding from a full day to half an hour
+\item Led migration to a CI/CD infrastructure for automated deployments based on Docker and AWS
+\item Slashed application rollback downtime by 100\%
 
 \end{rSubsection}
 
 \begin{rSubsection}{Co-Founder, StoryXpress, \it{Hyderabad, India} (\bf{storyxpress.co})}{May 2013 - August 2016}{}{}
-\item Founded a Cloud Video Service for large scale video creation from static content like image and text
-\item Built an in-house Video Rendering Engine on top of OpenGL eventually used by large enterprises like Target and TradeIndia
+\item Founded the Cloud Video Service for large scale video creation from static content
+\item Built an in-house Video Rendering Engine on top of OpenGL, generated around 2000 videos per month
+\item Led development of enterprise APIs and Web Application for enterprises like Target and TradeIndia
 
 \end{rSubsection}
 
