Add Vagrant and Ansible for technologies

--- a/cv/resume.tex
+++ b/cv/resume.tex
@@ -91,7 +91,7 @@
 
   \begin{itemize}[label={},topsep=0pt,itemsep=-0.5ex,partopsep=1ex,parsep=1ex,leftmargin=0.25em]
   \item  {\bf Programming Languages}: Python, Go, C, C++, Node, Java
-  \item {\bf Technologies}: OpenCV, Scikit-learn, OpenGL, Git, MySQL, React, Docker, Redis
+  \item {\bf Technologies}: OpenCV, Scikit-learn, OpenGL, Git, MySQL, React, Docker, Ansible, Vagrant, Redis
   \end{itemize}
 
 \end{rSection}
