--- a/cv/resume.tex
+++ b/cv/resume.tex
@@ -13,12 +13,12 @@
 
 \begin{rSection}{Education}
 
-{\bf Courant Institute of Mathematical Sciences, New York University} \hfill September 2017 - May 2019 \\
+{\bf Courant Institute of Mathematical Sciences, New York University} \hfill Sept 2017 - May 2019 \\
 \it{Masters in Computer Science}
 
 \vspace{-0.4em}
 
-{\bf Indian Institute of Technology (IIT) Hyderabad, India} \hfill August 2012 - May 2016 \\
+{\bf Indian Institute of Technology (IIT) Hyderabad, India} \hfill Aug 2012 - May 2016 \\
 \it{Bachelors in Computer Science and Engineering}
 \begin{list}{$\cdot$}{\leftmargin=2em}
 \itemsep -0.7em \vspace{-0.5em}
@@ -30,19 +30,19 @@
 
 \begin{rSection}{Research Experience}
 
-\begin{rSubsection}{Food Volume Estimation for Dietary Purposes}{July 2017 - present}{Advisor: Prof. Dennis Shasha}{}
+\begin{rSubsection}{Food Volume Estimation for Dietary Purposes}{Jul 2017 - present}{Advisor: Prof. Dennis Shasha}{}
 \item Investigating techniques for 3D Geometry Reconstruction from a given set of stereo images of food on plate
 \item Using ideas for Point Cloud Generation based on Depth Fusion Mapping
 
 \end{rSubsection}
 
-\begin{rSubsection}{Sports Video Recognition via Dense Trajectory Features}{September 2015 - November 2015}{Advisor:  Prof. Vineeth N Balasubramanian}{}
+\begin{rSubsection}{Sports Video Recognition via Dense Trajectory Features}{Sept 2015 - Nov 2015}{Advisor:  Prof. Vineeth N Balasubramanian}{}
 \item Utilized HOG, HOF and MBH detectors for voxel features and tracked the Optical Flow via DenseTrack
 \item Trained an SVM on 8 sports from UCF Sports Dataset with 30\% accuracy
 
 \end{rSubsection}
 
-\begin{rSubsection}{eDrishti, Engagement Level Detection in MOOC Videos}{January 2015 - April 2015}{Advisor:  Prof. Vineeth N Balasubramanian}{}
+\begin{rSubsection}{eDrishti, Engagement Level Detection in MOOC Videos}{Jan 2015 - Apr 2015}{Advisor:  Prof. Vineeth N Balasubramanian}{}
 \item Generated facial features for expression using Gabor Filters on a self-curated dataset of 200 videos
 \item Recognized engagement levels (low, medium, high) with an accuracy of 67\%
 
@@ -52,7 +52,7 @@
 
 \begin{rSection}{Professional Experience}
 
-\begin{rSubsection}{Software Engineer, Headout \it{Bengaluru, India} (\bf{headout.com})}{December 2016 - July 2017}{}{}
+\begin{rSubsection}{Software Engineer, Headout \it{Bengaluru, India} (\bf{headout.com})}{Dec 2016 - Jul 2017}{}{}
 \item Designed and implemented experiments for the Growth Team, built client APIs for the Platform team
 \item Led internal developer tooling, reduced developer on-boarding from a full day to half an hour
 \item Led migration to a CI/CD infrastructure for automated deployments based on Docker and AWS
@@ -60,7 +60,7 @@
 
 \end{rSubsection}
 
-\begin{rSubsection}{Co-Founder, StoryXpress, \it{Hyderabad, India} (\bf{storyxpress.co})}{May 2013 - August 2016}{}{}
+\begin{rSubsection}{Co-Founder, StoryXpress, \it{Hyderabad, India} (\bf{storyxpress.co})}{May 2013 - Aug 2016}{}{}
 \item Founded the Cloud Video Service for large scale video creation from static content
 \item Built an in-house Video Rendering Engine on top of OpenGL, generated around 2000 videos per month
 \item Led development of enterprise APIs and Web Application for enterprises like Target and TradeIndia
@@ -81,9 +81,10 @@
 
 \begin{rSection}{Relevant Projects}
   \begin{itemize}[label={},topsep=0pt,itemsep=-0.5ex,partopsep=1ex,parsep=1ex,leftmargin=0.25em]
-  \item  {\bf Docker Consul} - Built an Open Source Docker container with networking tweaks. Used for quorum management. 25000+ pulls since creation.
-  \item {\bf QuickSlots v2.0} - Designed a Timetable Scheduler by modeling it as a Min-Cost Bipartite Matching Problem
-  \item {\bf COOL Compiler} - Implemented the Lexing, Parsing and Semantic Phases for the Classroom Object Oriented Language
+  \item {\bf MariaDB Scheduler} - A Proof-of-Concept on top of DC/OS based on a very early-stage framework
+  \item  {\bf Docker Consul} - A Docker container with networking tweaks. Used for quorum management. 25000+ pulls.
+  \item {\bf QuickSlots v2.0} - A Timetable Scheduler modeled as Min-Cost Bipartite Matching Problem
+  \item {\bf COOL Compiler} - Lexing, Parsing and Semantic Phases for the Classroom Object Oriented Language
   \end{itemize}
 \end{rSection}
 
