Fix categories display

--- a/content/blog/guides/cloud-apps/1.md
+++ b/content/blog/guides/cloud-apps/1.md
@@ -2,7 +2,8 @@
 date: 2015-10-24T00:27:09+05:30
 description: Revisiting basic principles to engineer products
 title: The Ultimate Guide to Building Cloud Applications
-categories: []
+categories:
+  - guides
 tags:
   - devops
   - cloud
