--- a/content/blog/guides/cloud-apps/2.md
+++ b/content/blog/guides/cloud-apps/2.md
@@ -2,7 +2,8 @@
 date: 2015-12-06T00:27:09+05:30
 description: Developing better code with simplistic philosophies
 title: 'The Ultimate Guide to Building Cloud Applications - Development'
-categories: []
+categories:
+  - guides
 tags:
   - devops
   - cloud
