--- a/content/wishlist/refs.bib
+++ b/content/wishlist/refs.bib
@@ -32,3 +32,11 @@
   year={2001},
   publisher={MIT press}
 }
+
+@book{brooks2011handbook,
+  title={Handbook of markov chain monte carlo},
+  author={Brooks, Steve and Gelman, Andrew and Jones, Galin and Meng, Xiao-Li},
+  year={2011},
+  publisher={CRC press},
+  url={http://www.mcmchandbook.net/}
+}
