--- a/content/wishlist/refs.bib
+++ b/content/wishlist/refs.bib
@@ -40,3 +40,19 @@
   publisher={CRC press},
   url={http://www.mcmchandbook.net/}
 }
+
+@book{mohri2018foundations,
+  title={Foundations of machine learning},
+  author={Mohri, Mehryar and Rostamizadeh, Afshin and Talwalkar, Ameet},
+  year={2018},
+  publisher={MIT press},
+  url={https://cs.nyu.edu/~mohri/mlbook/}
+}
+
+@book{shalev2014understanding,
+  title={Understanding machine learning: From theory to algorithms},
+  author={Shalev-Shwartz, Shai and Ben-David, Shai},
+  year={2014},
+  publisher={Cambridge university press},
+  url={https://www.cs.huji.ac.il/~shais/UnderstandingMachineLearning/understanding-machine-learning-theory-algorithms.pdf}
+}
