--- a/content/machine-learning/policy-gradients-nutshell/refs.bib
+++ b/content/machine-learning/policy-gradients-nutshell/refs.bib
@@ -4,3 +4,78 @@
   year={2018},
   publisher={MIT press}
 }
+
+@book{bertsekas1995dynamic,
+  title={Dynamic programming and optimal control},
+  author={Bertsekas, Dimitri P and Bertsekas, Dimitri P and Bertsekas, Dimitri P and Bertsekas, Dimitri P},
+  volume={1},
+  number={2},
+  year={1995},
+  publisher={Athena scientific Belmont, MA}
+}
+
+@article{williams1992simple,
+  title={Simple statistical gradient-following algorithms for connectionist reinforcement learning},
+  author={Williams, Ronald J},
+  journal={Machine learning},
+  volume={8},
+  number={3-4},
+  pages={229--256},
+  year={1992},
+  publisher={Springer}
+}
+
+@inproceedings{sutton2000policy,
+  title={Policy gradient methods for reinforcement learning with function approximation},
+  author={Sutton, Richard S and McAllester, David A and Singh, Satinder P and Mansour, Yishay},
+  booktitle={Advances in neural information processing systems},
+  pages={1057--1063},
+  year={2000}
+}
+
+@inproceedings{silver2014deterministic,
+  title={Deterministic policy gradient algorithms},
+  author={Silver, David and Lever, Guy and Heess, Nicolas and Degris, Thomas and Wierstra, Daan and Riedmiller, Martin},
+  booktitle={ICML},
+  year={2014}
+}
+
+@inproceedings{mnih2016asynchronous,
+  title={Asynchronous methods for deep reinforcement learning},
+  author={Mnih, Volodymyr and Badia, Adria Puigdomenech and Mirza, Mehdi and Graves, Alex and Lillicrap, Timothy and Harley, Tim and Silver, David and Kavukcuoglu, Koray},
+  booktitle={International conference on machine learning},
+  pages={1928--1937},
+  year={2016}
+}
+
+@article{DBLP:journals/corr/LillicrapHPHETS15,
+  author    = {Timothy P. Lillicrap and
+               Jonathan J. Hunt and
+               Alexander Pritzel and
+               Nicolas Heess and
+               Tom Erez and
+               Yuval Tassa and
+               David Silver and
+               Daan Wierstra},
+  title     = {Continuous control with deep reinforcement learning},
+  journal   = {CoRR},
+  volume    = {abs/1509.02971},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1509.02971},
+  archivePrefix = {arXiv},
+  eprint    = {1509.02971},
+  timestamp = {Mon, 13 Aug 2018 16:46:11 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/LillicrapHPHETS15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{watkins1992q,
+  title={Q-learning},
+  author={Watkins, Christopher JCH and Dayan, Peter},
+  journal={Machine learning},
+  volume={8},
+  number={3-4},
+  pages={279--292},
+  year={1992},
+  publisher={Springer}
+}
