--- a/content/wishlist/refs.bib
+++ b/content/wishlist/refs.bib
@@ -56,3 +56,21 @@
   publisher={Cambridge university press},
   url={https://www.cs.huji.ac.il/~shais/UnderstandingMachineLearning/understanding-machine-learning-theory-algorithms.pdf}
 }
+
+@ARTICLE{2019arXiv190308114W,
+       author = {{Wang}, Ke Alexander and {Pleiss}, Geoff and {Gardner}, Jacob R. and
+         {Tyree}, Stephen and {Weinberger}, Kilian Q. and
+         {Wilson}, Andrew Gordon},
+        title = "{Exact Gaussian Processes on a Million Data Points}",
+      journal = {arXiv e-prints},
+     keywords = {Computer Science - Machine Learning, Computer Science - Distributed, Parallel, and Cluster Computing, Statistics - Machine Learning},
+         year = "2019",
+        month = "Mar",
+          eid = {arXiv:1903.08114},
+        pages = {arXiv:1903.08114},
+archivePrefix = {arXiv},
+       eprint = {1903.08114},
+ primaryClass = {cs.LG},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2019arXiv190308114W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
