wishlist on adaptive bayesian quadrature

--- a/content/wishlist/refs.bib
+++ b/content/wishlist/refs.bib
@@ -74,3 +74,31 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/\#abs/2019arXiv190308114W},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@inproceedings{ghahramani2003bayesian,
+  title={Bayesian monte carlo},
+  author={Ghahramani, Zoubin and Rasmussen, Carl E},
+  booktitle={Advances in neural information processing systems},
+  pages={505--512},
+  year={2003}
+}
+
+@article{o1987monte,
+  title={Monte Carlo is fundamentally unsound},
+  author={O'Hagan, Anthony},
+  journal={The Statistician},
+  pages={247--249},
+  year={1987},
+  publisher={JSTOR}
+}
+
+@article{o1991bayes,
+  title={Bayes--hermite quadrature},
+  author={O'Hagan, Anthony},
+  journal={Journal of statistical planning and inference},
+  volume={29},
+  number={3},
+  pages={245--260},
+  year={1991},
+  publisher={Elsevier}
+}
