--- a/site/content/kb/index.mdx
+++ b/site/content/kb/index.mdx
@@ -24,4 +24,4 @@ For me, the perfect Knowledge Base will at least have the following features.
 
 ## Acknowledgments
 
-The use of GitBook was inspired by the verbose collection of [Nikita Voloboev](https://wiki.nikitavoloboev.xyz). [Gwern Branwen](https://www.gwern.net), [Alexey Guzey](https://guzey.com/) and [Patrick Collison](https://patrickcollison.com) maintain very insightful websites. [The Farnam Street](https://fs.blog/about/) podcast by Shane Parrish is also an excellent resource on mental models which has finally led undertake this exercise.
+The use of GitBook was inspired by the verbose collection of [Nikita Voloboev](https://wiki.nikitavoloboev.xyz). [Gwern Branwen](https://www.gwern.net), [Alexey Guzey](https://guzey.com/) and [Patrick Collison](https://patrickcollison.com) maintain very insightful websites. [The Farnam Street](https://fs.blog/about/) podcast by Shane Parrish is also an excellent resource on mental models which has finally led me to undertake this exercise.
