Clean up frontmatter and fields management

--- a/site/content/blog/cloud-app-guides/1.md
+++ b/site/content/blog/cloud-app-guides/1.md
@@ -6,7 +6,7 @@ tags:
   - devops
   - cloud
   - applications
-stale: true
+archive: true
 ---
 
 # The Ultimate Guide to Building Cloud Applications
