Add meta info, tags below title

--- a/site/content/blog/cloud-app-guides/2.md
+++ b/site/content/blog/cloud-app-guides/2.md
@@ -7,8 +7,6 @@ tags:
 archive: true
 ---
 
-# The Ultimate Guide to Building Cloud Applications - Development
-
 Every big project ever dreamt of, always started from that one folder sitting on
 a local development machine. While, it could be highly likely that many projects
 never saw the light of the day, don’t forget the fact that you are the architect
@@ -21,7 +19,7 @@ day one of development.
 > This article is the second installment to the discussion at
 > The Ultimate Guide to Building Cloud Applications. To be in line with some
 > primer philosophies, I recommend reading
-> [this](/devops/ultimate-guide-to-building-cloud-applications) first.
+> [this](./1) first.
 
 ---
 
